--- a/app/start/index.html
+++ b/app/start/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=/launch/" />
+    <meta http-equiv="Refresh" content="0; url=/grails-forge-ui/" />
   </head>
   <body>
-    <p>Please click <a href="/launch/">here</a> to get started with Micronaut!</p>
+    <p>Please click <a href="/grails-forge-ui/">here</a> to get started with Grails!</p>
   </body>
 </html>
