Update path to "/" instead of "./grails-forge-ui/"

--- a/app/start/index.html
+++ b/app/start/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=/grails-forge-ui/" />
+    <meta http-equiv="Refresh" content="0; url=/" />
   </head>
   <body>
-    <p>Please click <a href="/grails-forge-ui/">here</a> to get started with Grails!</p>
+    <p>Please click <a href="/">here</a> to get started with Grails!</p>
   </body>
 </html>
